--- a/color.html
+++ b/color.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 
 <html>
+  <head>
+    <title>Exam1 Extra Credit</title>
+    <link rel="stylesheet" href="color.css">
+  </head>
   <body>
-    
+    <div class="skills">
       <h2>My Skills</h2>
         <ul>
           <li>Python</li>
           <li>HTML</li>
           <li>CSS</li>
         </ul>
+    </div>
+    <div class="tools">
       <h3>My Tools</h3>
       <ul>
         <li><a href="#">Git</a></li>
         <li><a href="#">Atom</a></li>
         <li>AWS</li>
       </ul>
-
     </div>
   </body>
 </html>
